kubernetes/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  nginx-service
  namespace: nginx
spec:
  selector:
    app:  nginx-app
  type:  ClusterIP
  ports:
  - name:  http
    port:  8080
    targetPort: 80
